# paper_anonymous

./: .gitignore  README.md  main.py  pyproject.toml
configs/: README.md  system-topo-v3.yaml
docs/: architecture.md  processor_adapter_minimal_interface.md  processor_runtime_contract.md
host/: README.md  __init__.py
host/control_plane/: README.md  __init__.py  sync_dcn_host.py  sync_dcn_program.py
host/nic_driver/: mqnic_main.c  mqnic_tx.c
nic_driver/: .gitignore  Makefile  mqnic_rx.c
nic_driver/include/: meas_hdr_kernel.h
nic_fpga/: README.md  program_fpga.sh
runtime/: README.md
runtime/dni/: README.md
runtime/fabric/: README.md
scripts/: host_setup.py  tofino_setup.py  topo_validate.py
switch_tofino/bfrt_python/: apply_clos_from_yaml.py  apply_l2_from_yaml.py  apply_nopaxos_from_yaml.py  apply_nopaxos_tofino_sequencer.py  config_fct_pktgen.py  config_spineleaf.py
switch_tofino/p4src/: hybrid_arch.p4
toolchain/: README.md  __init__.py
toolchain/compiler/: README.md  __init__.py  sync_dcn_global_compile.py  utopia_global_compile.py
toolchain/experiments/: README.md  __init__.py  sync_dcn_prepare_experiment.py  utopia_prepare_experiment.py
toolchain/lowering/: README.md  __init__.py  compile.py  schedule_timing.py
toolchain/orchestration/: host_setup.py  tofino_setup.py
toolchain/system_input/: README.md  __init__.py  sync_dcn_build_consensus_periodic_experiment.py  sync_dcn_build_moe_model_experiment.py  sync_dcn_load_system_input.py
toolchain/topology/: __init__.py  model.py  (+2 more)
utils/: README.md  logging.py
workloads/: README.md
(+282 files in other folders)
